--- a/style.css
+++ b/style.css
@@ -230,9 +230,23 @@ margin-right: 79%;
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
         position: relative;
         overflow: hidden;
-        width: 868px;
+        width: 868px
         max-width: 100%;
         min-height: 710px;
     }
+    .social-icons{
+    margin: 20px 0;
+}
+
+.social-icons a{
+    border: 1px solid #ccc;
+    border-radius: 20%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 3px;
+    width: 40px;
+    height: 40px;
+}
     
 }
