--- a/style.css
+++ b/style.css
@@ -236,9 +236,13 @@ margin-right: 79%;
     }
     .social-icons{
     margin: 20px 0;
+            display: none;
+
 }
 
 .social-icons a{
+        display: none;
+
     border: 1px solid #ccc;
     border-radius: 20%;
     display: flex;
